<!--
  ~ /**
  ~  * Created by DemonApps on 26.08.20 12:34
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 26.08.20 12:17
  ~  */
  -->

<resources>
    <string name="app_name">Огневая подготовка</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_otvety">Ответы</string>
    <string name="menu_teory">Теория</string>
    <string name="menu_pravila">Правила</string>
    <string name="menu_onas">О программе</string>
    <string name="a">А</string>
    <string name="b">Б</string>
    <string name="v">В</string>
    <string name="g">Г</string>
    <string name="title_activity_ocenka">Результат</string>
    <string name="tab_text_1">Оценка</string>
    <string name="tab_text_2">Ошибки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ocenka">Ваша оценка</string>
    <string name="oshibki">Ваши ошибки</string>
    <string name="kol_vo_oshibok">Ошибок:</string>
    <string name="demonapps">DemonApps</string>
    <string name="share">Поделиться…</string>
    <!--- Меню приказы -->
    <string name="action_tth">ТТХ ПМ-9мм</string>
    <string name="action_tthaks">ТТХ АКС-74У</string>
    <string name="action_prikaz880">Пр. МВД РФ N 880</string>
    <string name="action_glava5">Глава 5 ФЗ ´О полиции´</string>
    <string name="vibor">Выбрать</string>
    <string name="rnd_bilet">Случайный билет</string>
    <string name="vibery_bilet">Выберите билет:</string>
    <string name="pravila"> Всё как при сдаче теоретического зачёта по огневой подготовке в МВД РФ во время годовой проверки:\n
- 20 вопросов с вариантами ответов\n
- возможность сделать не более 4 ошибок\n
- оценка зачёт/незачёт…</string>
    <string name="privacypolicy">Политика конфиденциальности</string>

</resources>