<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by DemonApps on 26.08.20 12:34
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 26.08.20 12:14
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_otvety"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_otvety" />
        <item
            android:id="@+id/nav_teory"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_teory" />
        <item
            android:id="@+id/nav_praila"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_pravila" />
        <item
            android:id="@+id/nav_onas"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_onas" />
    </group>
</menu>