<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by DemonApps on 26.08.20 12:34
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 26.08.20 12:14
  ~  */
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.demonapps.pravovajamvd.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_otvety"
        android:name="ru.demonapps.pravovajamvd.ui.otvety.OtvetyFragment"
        android:label="@string/menu_otvety"
        tools:layout="@layout/fragment_otvety" />

    <fragment
        android:id="@+id/nav_teory"
        android:name="ru.demonapps.pravovajamvd.ui.teory.TeoryFragment"
        android:label="@string/menu_teory"
        tools:layout="@layout/fragment_teory" />
    <fragment
        android:id="@+id/nav_praila"
        android:name="ru.demonapps.pravovajamvd.ui.PravilaFragment"
        android:label="@string/menu_pravila"
        tools:layout="@layout/fragment_pravila" />
    <fragment
        android:id="@+id/nav_onas"
        android:name="ru.demonapps.pravovajamvd.ui.OnasFragment"
        android:label="@string/menu_onas"
        tools:layout="@layout/fragment_pravila" />
</navigation>