<!--
  ~ /**
  ~  * Created by DemonApps on 06.08.19 21:10
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 06.08.19 20:37
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="appinventor.ai_demon_bek.ognevaja.Prikaz">
    <item
        android:id="@+id/action_prikaz880"
        android:orderInCategory="100"
        android:title="@string/action_prikaz880"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_glava5"
        android:orderInCategory="100"
        android:title="@string/action_glava5"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tth"
        android:orderInCategory="100"
        android:title="@string/action_tth"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tthaks"
        android:orderInCategory="100"
        android:title="@string/action_tthaks"
        app:showAsAction="never" />
</menu>
