<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by DemonApps on 26.08.20 12:34
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 25.08.20 21:15
  ~  */
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bilet">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="60dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textVerno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textColor="#8BC34A"
                    android:textSize="30sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/textRazdel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="/"
                    android:textSize="30sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/textVsego"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="30sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <TextView
                android:id="@+id/textVopros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="normal|bold|italic" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/btnA"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btvB"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/b"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnV"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/v"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnG"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/g"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>